--- a/about.html
+++ b/about.html
@@ -3,33 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Про нас</title>
-    <link rel="stylesheet" href="about.css">
+    <title>Про клініку MedicTF2</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Про нашу клініку</h1>
+        <h1>Про клініку MedicTF2</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Головна</a></li>
-                <li><a href="about.html">Про нас</a></li>
-                <li><a href="#">Лікарі</a></li>
+                <li><a href="doctors.html">Лікарі</a></li>
                 <li><a href="#">Графік роботи</a></li>
                 <li><a href="#">Запис на прийом</a></li>
+                <li><a href="login.html">Увійти/Зареєструватися</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="about-content">
-        <h2>Наша історія та місія</h2>
-        <p>
-            Наша клініка надає сучасні медичні послуги з використанням передових технологій та досвідчених фахівців.
-            Ми піклуємося про здоров’я кожного пацієнта та прагнемо забезпечити високоякісний сервіс.
-        </p>
-    </section>
-
+    <main>
+        <section>
+            <h2>Наша історія</h2>
+            <p>Клініка MedicTF2 була створена з метою надання високоякісних медичних послуг. Ми починали як невелика лікарня і виросли до сучасного медичного центру з передовим обладнанням.</p>
+        </section>
+        <section>
+            <h2>Наша місія</h2>
+            <p>Ми прагнемо забезпечити пацієнтам найкращі умови для лікування та профілактики захворювань, використовуючи інноваційні методи та сучасні технології.</p>
+        </section>
+        <section>
+            <h2>Наші досягнення</h2>
+            <ul>
+                <li>Сертифіковані лікарі з великим досвідом працюють у клініці.</li>
+                <li>Сучасне обладнання та технології діагностики.</li>
+                <li>Високий рівень задоволеності пацієнтів.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наші послуги</h2>
+            <p>Ми пропонуємо широкий спектр медичних послуг, включаючи:</p>
+            <ul>
+                <li>Консультації лікарів різних спеціальностей.</li>
+                <li>Діагностичні обстеження.</li>
+                <li>Стаціонарне лікування.</li>
+                <li>Реабілітаційні програми.</li>
+            </ul>
+        </section>
+    </main>
+    
     <footer>
-        <p>&copy; 2025 Кліника MedicTF2</p>
+        <p>&copy; 2025 Клініка MedicTF2. Всі права захищені.</p>
+        <p>Контакти: вул. Медична, 12, Київ, Україна | Телефон: +380 44 123 4567 | Email: info@medictf2.ua</p>
     </footer>
 </body>
 </html>
