--- a/forgot-password.html
+++ b/forgot-password.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Восстановление пароля</title>
+    <title>Відновлення пароля</title>
     <link rel="stylesheet" href="forgot-password.css">
 </head>
 <body>
     <div class="container">
-        <h1>Восстановление пароля</h1>
+        <h1>Відновлення пароля</h1>
         <form action="#" method="post">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <button type="submit">Восстановить пароль</button>
+            <button type="submit">Відновити пароль</button>
         </form>
-        <p><a href="login.html">Вернуться к входу</a></p>
+        <p><a href="login.html">Повернутися до входу</a></p>
     </div>
 </body>
 </html>
