--- a/index.html
+++ b/index.html
@@ -3,41 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Клініка MedicTF2 – сучасні медичні послуги в Києві">
     <title>Кліника MedicTF2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <h1>Вітаємо у клініці MedicTF2</h1>
-        <nav>
+        <nav aria-label="Основна навігація">
             <ul>
                 <li><a href="about.html">Про клініку</a></li>
-                <li><a href="#">Лікарі</a></li>
-                <li><a href="#">Графік роботи</a></li>
-                <li><a href="#">Запис на прийом</a></li>
-                <li><a href="#">Увійти/Зареєструватися</a></li>
+                <li><a href="doctors.html">Лікарі</a></li>
+                <li><a href="#schedule">Графік роботи</a></li>
+                <li><a href="#appointment">Запис на прийом</a></li>
+                <li><a href="login.html">Увійти/Зареєструватися</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="about">
-        <h2>Про нас</h2>
-        <p>Наша клініка пропонує сучасні медичні послуги для забезпечення вашого здоров'я. Ми маємо досвідчених лікарів та використовуємо передові технології для діагностики і лікування.</p>
-    </section>
-
-    <section id="contacts">
-        <h2>Контактні дані</h2>
-        <p>Адреса: вул. Медична, 1, Київ, Україна</p>
-        <p>Телефон: +380 228 322 777</p>
-        <div id="map">
-            <iframe src="https://maps.app.goo.gl/ZKb1zTtigzmKYCDD9" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </section>
-
-    <section id="quick-access">
-        <button onclick="location.href='#'">Переглянути лікарів</button>
-        <button onclick="location.href='#'">Записатися на прийом</button>
-        <button onclick="location.href='register.html'">Увійти/Зареєструватися</button>
-    </section>
+    <main>
+        <section id="about">
+            <h2>Про нас</h2>
+            <p>Наша клініка пропонує сучасні медичні послуги для забезпечення вашого здоров’я. Ми маємо досвідчених лікарів та використовуємо передові технології для діагностики та лікування.</p>
+            <p>Пропонуємо консультації, діагностику, лікування та профілактику – все для вашого благополуччя.</p>
+            <p>Клініка MedicTF2 працює з 2010 року, і за цей час ми допомогли тисячам пацієнтів. Ми пишаємося нашою репутацією та прагнемо забезпечити найвищий рівень обслуговування.</p>
+        </section>
+        <section id="doctors">
+            <h2>Наші лікарі</h2>
+            <p>У клініці працюють найкращі фахівці:</p>
+            <ul>
+                <li>Д-р Іваненко Олександр — кардіолог, 15 років досвіду, спеціалізація на лікуванні серцево-судинних захворювань.</li>
+                <li>Д-р Петрова Марія — терапевт, 10 років досвіду, експерт у загальній медицині та профілактиці хвороб.</li>
+                <li>Д-р Сидоренко Андрій — хірург, 20 років досвіду, спеціалізація на малоінвазивних операціях.</li>
+            </ul>
+            <p>Наші лікарі регулярно проходять підвищення кваліфікації та беруть участь у міжнародних конференціях.</p>
+        </section>
+        <section id="schedule">
+            <h2>Графік роботи</h2>
+            <p>Понеділок - П'ятниця: 08:00 - 20:00</p>
+            <p>Субота: 09:00 - 15:00</p>
+            <p>Неділя: вихідний</p>
+            <p>Ми працюємо без перерви на обід, щоб забезпечити максимальну зручність для наших пацієнтів.</p>
+        </section>
+        <section id="appointment">
+            <h2>Запис на прийом</h2>
+            <p>Записатися можна онлайн або за телефоном: <a href="tel:+380228322777">+380 228 322 777</a>.</p>
+            <button onclick="location.href='register.html'">Записатися</button>
+        </section>
+        <section id="contacts">
+            <h2>Контактні дані</h2>
+            <p>Адреса: вул. Медична, 1, Київ, Україна</p>
+            <p>Телефон: <a href="tel:+380228322777">+380 228 322 777</a></p>
+            <p>Email: <a href="mailto:info@medictf2.ua">info@medictf2.ua</a></p>
+            <p>Соціальні мережі:</p>
+            <ul>
+                <li><a href="https://facebook.com/medictf2" target="_blank">Facebook</a></li>
+                <li><a href="https://instagram.com/medictf2" target="_blank">Instagram</a></li>
+            </ul>
+            <div id="map">
+                <iframe src="https://maps.app.goo.gl/ZKb1zTtigzmKYCDD9" width="600" height="450" style="border:0;" allowfullscreen loading="lazy" title="Карта розташування клініки MedicTF2"></iframe>
+            </div>
+        </section>
+        <section id="quick-access">
+            <h2>Швидкий доступ</h2>
+            <button onclick="location.href='doctors.html'">Переглянути лікарів</button>
+            <button onclick="location.href='#appointment'">Записатися на прийом</button>
+            <button onclick="location.href='register.html'">Увійти/Зареєструватися</button>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Кліника MedicTF2. Всі права захищені.</p>
+    </footer>
 </body>
 </html>
