--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Регистрация</h1>
+        <p>Заполните форму ниже, чтобы создать аккаунт и получить доступ к нашим услугам.</p>
         <div class="register-fields">
             <label for="name">Имя:</label>
             <input type="text" id="name" name="name">
