--- a/login.html
+++ b/login.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход</title>
+    <title>Вхід</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="container">
-        <h1>Вход</h1>
+        <h1>Вхід</h1>
         <div class="login-fields">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email">
             <label for="password">Пароль:</label>
             <input type="password" id="password" name="password">
         </div>
-        <button onclick="window.location.href='index.html'">Войти</button>
-        <p><a href="forgot-password.html">Забыли пароль?</a></p>
-        <p><a href="register.html">Регистрация</a></p>
+        <p>Введіть свої облікові дані для входу в систему.</p>
+        <button onclick="window.location.href='index.html'">Вхід</button>
+        <p><a href="forgot-password.html">Забули пароль?</a></p>
+        <p><a href="register.html">Реєстрація</a></p>
     </div>
 </body>
 </html>
