--- a/doctors.html
+++ b/doctors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лікарі клініки MedicTF2</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="doctors.css">
 </head>
 <body>
     <header>
@@ -40,6 +40,100 @@
                 <p>За понад 20-річного досвіду у хірургії, Д-р Сидоренко проводить складні операції з високою точністю, використовуючи найсучасніші методи та технології.</p>
                 <p>Його спеціалізація включає лапароскопічні операції та онкохірургію.</p>
             </article>
+        </section>
+
+        <section class="schedule">
+            <h2>Графік роботи лікарів</h2>
+            <div class="weekly-schedule">
+                <div class="day">Понеділок</div>
+                <div class="day">Вівторок</div>
+                <div class="day">Середа</div>
+                <div class="day">Четвер</div>
+                <div class="day">П'ятниця</div>
+                <div class="day">Субота</div>
+                <div class="doctor">Д-р Іваненко<br>08:00 - 14:00</div>
+                <div class="doctor">Д-р Петренко<br>10:00 - 16:00</div>
+                <div class="doctor">Д-р Сидоренко<br>12:00 - 18:00</div>
+                <div class="doctor">Д-р Коваленко<br>08:00 - 14:00</div>
+                <div class="doctor">Д-р Мельник<br>09:00 - 15:00</div>
+                <div class="doctor">Д-р Ткаченко<br>10:00 - 14:00</div>
+                <div class="doctor">Д-р Іваненко<br>08:00 - 14:00</div>
+                <div class="doctor">Д-р Петренко<br>10:00 - 16:00</div>
+                <div class="doctor">Д-р Сидоренко<br>12:00 - 18:00</div>
+                <div class="doctor">Д-р Коваленко<br>08:00 - 14:00</div>
+                <div class="doctor">Д-р Мельник<br>09:00 - 15:00</div>
+                <div class="doctor">Д-р Ткаченко<br>10:00 - 14:00</div>
+            </div>
+            <h2>Детальний розклад</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Лікар</th>
+                        <th>Понеділок</th>
+                        <th>Вівторок</th>
+                        <th>Середа</th>
+                        <th>Четвер</th>
+                        <th>П'ятниця</th>
+                        <th>Субота</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Д-р Іваненко</td>
+                        <td>08:00 - 14:00</td>
+                        <td>10:00 - 16:00</td>
+                        <td>12:00 - 18:00</td>
+                        <td>08:00 - 14:00</td>
+                        <td>09:00 - 15:00</td>
+                        <td>10:00 - 14:00</td>
+                    </tr>
+                    <tr>
+                        <td>Д-р Петренко</td>
+                        <td>08:00 - 12:00</td>
+                        <td>10:00 - 14:00</td>
+                        <td>08:00 - 12:00</td>
+                        <td>10:00 - 14:00</td>
+                        <td>08:00 - 12:00</td>
+                        <td>08:00 - 12:00</td>
+                    </tr>
+                    <tr>
+                        <td>Д-р Сидоренко</td>
+                        <td>12:00 - 18:00</td>
+                        <td>08:00 - 12:00</td>
+                        <td>12:00 - 18:00</td>
+                        <td>08:00 - 12:00</td>
+                        <td>08:00 - 12:00</td>
+                        <td>08:00 - 12:00</td>
+                    </tr>
+                    <tr>
+                        <td>Д-р Коваленко</td>
+                        <td>08:00 - 14:00</td>
+                        <td>10:00 - 14:00</td>
+                        <td>—</td>
+                        <td>08:00 - 14:00</td>
+                        <td>—</td>
+                        <td>08:00 - 12:00</td>
+                    </tr>
+                    <tr>
+                        <td>Д-р Мельник</td>
+                        <td>09:00 - 15:00</td>
+                        <td>10:00 - 14:00</td>
+                        <td>—</td>
+                        <td>—</td>
+                        <td>08:00 - 12:00</td>
+                        <td>—</td>
+                    </tr>
+                    <tr>
+                        <td>Д-р Ткаченко</td>
+                        <td>10:00 - 14:00</td>
+                        <td>—</td>
+                        <td>—</td>
+                        <td>—</td>
+                        <td>08:00 - 12:00</td>
+                        <td>09:00 - 12:00</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
     
