--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="appointment">
             <h2>Запис на прийом</h2>
             <p>Записатися можна онлайн або за телефоном: <a href="tel:+380228322777">+380 228 322 777</a>.</p>
-            <button onclick="location.href='register.html'">Записатися</button>
+            <button onclick="location.href='appointment.html'">Записатися</button>
         </section>
         <section id="contacts">
             <h2>Контактні дані</h2>
